--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.dev.textscanner">
+    package="com.dev.textractor">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="Text Scanner"
+        android:label="Textractor"
         android:icon="@mipmap/ic_launcher">
           <activity
             android:name="com.yalantis.ucrop.UCropActivity"
